2006-01-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure.in, configure: update to TEA 3.5

2006-01-10  Daniel Steffen  <das@users.sourceforge.net>

	* generic/sample.c:
	* generic/tclsample.c: fix gcc4 warnings.

	* configure: autoconf-2.59 for TEA updates.

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-11-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: update to TEA 3.4 (darwin-64, Win-64
	build improvements). [Bug 1369597]

	* pkgIndex.tcl.in: specify $PACKAGE_NAME to load

2005-11-27  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-09-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: using TEA 3.3 that has threads enabled
	by default.

	* Makefile.in: remove unnecessary private dir info

2005-07-26  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Remove SYSTEM_TCLSH and revert
	back to just using TCLSH_PROG and WISH_PROG.
	Remove use of SYSTEM_TCLSH at build time since
	this is no longer supported.
	* configure: Regen.
	* configure.in: Don't invoke TEA_BUILD_TCLSH or
	TEA_BUILD_WISH since these were removed from
	tcl.m4. This fixes up support for a build
	or installed version of Tcl.

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* README: Add info about mingw and mention
	pkgIndex.tcl.in.
	* configure: Regen.
	* configure.in: Emit a pkgIndex.tcl in the
	build directory. This makes it possible to
	build and install sampleextension without
	having to run anything in a tclsh shell.
	A build process that depends on running
	the software being built will not work
	when cross compiling.
	* pkgIndex.tcl.in: Add template.

2005-07-24  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Subst TCLSH_PROG from PATH
	as SYSTEM_TCLSH and subst BUILD_TCLSH and
	BUILD_WISH. Use SYSTEM_TCLSH for the
 	pkgIndex.tcl generation target.
	* configure: Regen.